[gd_scene load_steps=31 format=3 uid="uid://dy0lef1kom6ie"]

[ext_resource type="Script" path="res://scripts/ui/HUD.gd" id="1_6kagt"]
[ext_resource type="FontFile" uid="uid://ca744fnf8qt4u" path="res://fonts/BluebirdLi.otf" id="2_u0384"]
[ext_resource type="Texture2D" uid="uid://c1mwpv7m1uw8s" path="res://art/sprites/character/eagle1.svg" id="3_ktay7"]
[ext_resource type="Texture2D" uid="uid://biptpnhbdxfaw" path="res://art/sprites/ui/icone_pause.svg" id="4_i8xhv"]
[ext_resource type="Texture2D" uid="uid://dai7yjqmblxos" path="res://art/sprites/ui/heart_empty_2.svg" id="5_q3nhi"]
[ext_resource type="Texture2D" uid="uid://bxqx5koc2t86c" path="res://art/sprites/ui/heart_filled_2.svg" id="6_e5mxf"]

[sub_resource type="SpriteFrames" id="SpriteFrames_bgp1q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": ExtResource("3_ktay7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_e73j5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_q3nhi")
}],
"loop": false,
"name": &"empty",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_q3nhi")
}, {
"duration": 1.0,
"texture": ExtResource("6_e5mxf")
}, {
"duration": 1.0,
"texture": ExtResource("5_q3nhi")
}, {
"duration": 1.0,
"texture": ExtResource("6_e5mxf")
}],
"loop": false,
"name": &"empty_to_filled",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_e5mxf")
}],
"loop": false,
"name": &"filled",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_e5mxf")
}, {
"duration": 1.0,
"texture": ExtResource("5_q3nhi")
}],
"loop": false,
"name": &"filled_to_empty",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_wjnt6"]
resource_name = "four_2_three"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Heart4")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [&"filled_to_empty", 1.0, false],
"method": &"play"
}, {
"args": [&"empty", 1.0, false],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_3tadw"]
resource_name = "one_2_zero"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Heart1")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [&"filled_to_empty", 1.0, false],
"method": &"play"
}, {
"args": [&"empty", 1.0, false],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_i6ujb"]
resource_name = "reset_life"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Heart1")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [&"filled", 1.0, false],
"method": &"play"
}, {
"args": [&"filled", 1.0, false],
"method": &"play"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Heart2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [&"filled", 1.0, false],
"method": &"play"
}, {
"args": [&"filled", 1.0, false],
"method": &"play"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Heart3")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [&"filled", 1.0, false],
"method": &"play"
}, {
"args": [&"filled", 1.0, false],
"method": &"play"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Heart4")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [&"filled", 1.0, false],
"method": &"play"
}, {
"args": [&"filled", 1.0, false],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_pa0ob"]
resource_name = "three_2_two"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Heart3")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [&"filled_to_empty", 1.0, false],
"method": &"play"
}, {
"args": [&"empty", 1.0, false],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_2cio4"]
resource_name = "two_2_one"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Heart2")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [&"filled_to_empty", 1.0, false],
"method": &"play"
}, {
"args": [&"empty", 1.0, false],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xacys"]
_data = {
"four_2_three": SubResource("Animation_wjnt6"),
"one_2_zero": SubResource("Animation_3tadw"),
"reset_life": SubResource("Animation_i6ujb"),
"three_2_two": SubResource("Animation_pa0ob"),
"two_2_one": SubResource("Animation_2cio4")
}

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ea4ok"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_ps5d5"]
transitions = ["Start", "End", SubResource("AnimationNodeStateMachineTransition_ea4ok")]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p6nqp"]
animation = &"four_2_three"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2go0w"]
animation = &"one_2_zero"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_msj8h"]
animation = &"reset_life"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_d7lgn"]
animation = &"three_2_two"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_spxg1"]
animation = &"two_2_one"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_e06g6"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_k75wo"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4u34s"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bsuyl"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bruo4"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w5br5"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cj5ax"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ga0bn"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_rqw7o"]
states/End/position = Vector2(965, 100)
states/Full_health/node = SubResource("AnimationNodeStateMachine_ps5d5")
states/Full_health/position = Vector2(200, 100)
states/Start/position = Vector2(61, 100)
states/four_2_three/node = SubResource("AnimationNodeAnimation_p6nqp")
states/four_2_three/position = Vector2(365, 100)
states/one_2_zero/node = SubResource("AnimationNodeAnimation_2go0w")
states/one_2_zero/position = Vector2(830, 100)
states/reset_life/node = SubResource("AnimationNodeAnimation_msj8h")
states/reset_life/position = Vector2(523, 288)
states/three_2_two/node = SubResource("AnimationNodeAnimation_d7lgn")
states/three_2_two/position = Vector2(523, 100)
states/two_2_one/node = SubResource("AnimationNodeAnimation_spxg1")
states/two_2_one/position = Vector2(680, 100)
transitions = ["four_2_three", "three_2_two", SubResource("AnimationNodeStateMachineTransition_e06g6"), "three_2_two", "two_2_one", SubResource("AnimationNodeStateMachineTransition_k75wo"), "two_2_one", "one_2_zero", SubResource("AnimationNodeStateMachineTransition_4u34s"), "Start", "Full_health", SubResource("AnimationNodeStateMachineTransition_bsuyl"), "Full_health", "four_2_three", SubResource("AnimationNodeStateMachineTransition_bruo4"), "one_2_zero", "reset_life", SubResource("AnimationNodeStateMachineTransition_w5br5"), "one_2_zero", "End", SubResource("AnimationNodeStateMachineTransition_cj5ax"), "reset_life", "Full_health", SubResource("AnimationNodeStateMachineTransition_ga0bn")]
graph_offset = Vector2(-210, -20)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_6kagt")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.0
offset_right = 46.0
offset_bottom = 129.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_u0384")
theme_override_font_sizes/font_size = 128
text = "0"
horizontal_alignment = 2

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.5
offset_top = -39.0
offset_right = 175.5
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_u0384")
theme_override_font_sizes/font_size = 64
text = "FLY BABY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -140.0
offset_top = -150.0
offset_right = 140.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_u0384")
theme_override_font_sizes/font_size = 92
text = "Retry"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="EagleAlert" type="AnimatedSprite2D" parent="."]
top_level = true
position = Vector2(358, 217)
sprite_frames = SubResource("SpriteFrames_bgp1q")
frame_progress = 0.244805

[node name="PauseButton" type="TextureButton" parent="."]
offset_left = 36.0
offset_top = 16.0
offset_right = 460.0
offset_bottom = 599.0
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("4_i8xhv")

[node name="Heart1" type="AnimatedSprite2D" parent="."]
position = Vector2(670, 50)
scale = Vector2(0.05, 0.05)
sprite_frames = SubResource("SpriteFrames_e73j5")
animation = &"filled"

[node name="Heart2" type="AnimatedSprite2D" parent="."]
position = Vector2(670, 100)
scale = Vector2(0.05, 0.05)
sprite_frames = SubResource("SpriteFrames_e73j5")
animation = &"filled"

[node name="Heart3" type="AnimatedSprite2D" parent="."]
position = Vector2(670, 150)
scale = Vector2(0.05, 0.05)
sprite_frames = SubResource("SpriteFrames_e73j5")
animation = &"filled"

[node name="Heart4" type="AnimatedSprite2D" parent="."]
position = Vector2(670, 200)
scale = Vector2(0.05, 0.05)
sprite_frames = SubResource("SpriteFrames_e73j5")
animation = &"filled"

[node name="AnimationPlayerHearts" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xacys")
}

[node name="AnimationTreeHearts" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xacys")
}
tree_root = SubResource("AnimationNodeStateMachine_rqw7o")
anim_player = NodePath("../AnimationPlayerHearts")

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
